# mimetica

./: LICENCE.md  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: pypi.yml
mimetica/: __init__.py  conf.py  main.py  version.py
mimetica/display/: canvas.py  chart.py  dock.py  image.py  plot.py  splitview.py  tab.py  thumbnail.py
mimetica/display/roi/: contour.py  line.py  target.py
mimetica/gui/: main.py
mimetica/gui/display/: canvas.py  dock.py  splitview.py
mimetica/scan/: layer.py  stack.py
mimetica/utils/: __init__.py  config.py  functions.py
