[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Alexander Hadjiivanov", email = "43831101+cantordust@users.noreply.github.com" },
]
dependencies = [
    "loguru",
    "numpy",
    "matplotlib",
    "opencv-python",
    "omegaconf",
    "platformdirs",
    "PySide6",
    "pyqtgraph",
    "scikit-image[optional]",
    "shapely",
    "rich",
]
name = "mimetica"
requires-python = ">= 3.11"
version = "0.2.3"
license = "MIT"
readme = "README.md"

[project.scripts]
mimetica = "mimetica.gui.main:run"
